--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jobdapter",
-  "version": "0.0.2",
-  "description": "Node.js Jobqueue Adapter for Devebot",
+  "version": "0.0.2-alpha1",
+  "description": "Jobqueue Adapter for Devebot",
   "main": "index.js",
   "scripts": {
     "test": "mocha test/*-test.js"
@@ -14,13 +14,21 @@
     "devebot",
     "jobqueue"
   ],
-  "author": "Hung Pham <pnhung177@acegik.net> (http://acegik.net/blog)",
+  "author": {
+    "name": "Hung Pham",
+    "email": "pnhung177@acegik.net",
+    "url": "http://acegik.net/blog"
+  },
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/devebot/jobdapter/issues"
   },
   "homepage": "https://github.com/devebot/jobdapter#readme",
   "dependencies": {
+    "debug": "^2.2.0",
+    "kue": "^0.10.5"
+  },
+  "devDependencies": {
     "chai": "^3.4.1",
     "mocha": "^2.3.4",
     "sinon": "^1.17.2"
